--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,12 @@
     <string name="add_edit_port_hint">例:554</string>
     <string name="add_edit_backstring_hint">例:stream2</string>
     <string name="add_edit_emptyinfo_error_hint">有信息未填</string>
+    <string name="wrong_edit_info_error_hint">您填的IP地址不正确</string>
     <string name="dialog_title">提示</string>
     <string name="dialog_message">确定要删除所有监控信息吗?</string>
     <string name="dialog_cancel">取消</string>
     <string name="dialog_sure">确定</string>
+    <string name="no_camera_hint">请选中一个摄像头</string>
     <string name="play_btn_audio">声音/禁音</string>
     <string name="play_btn_record">录像</string>
     <string name="stop_btn_record">停止</string>
