--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="add_name_label">名称:</string>
     <string name="add_IP_label">IP地址:</string>
     <string name="add_port_label">端口:</string>
-    <string name="add_backstring_label">后缀:</string>
+    <string name="add_backstring_label">后缀:\t</string>
     <string name="add_edit_name_hint">例:电梯右上角</string>
     <string name="add_edit_ip_hint">例：192.168.1.217</string>
     <string name="add_edit_port_hint">例:554</string>
@@ -29,5 +29,7 @@
     <string name="gravity_left">left</string>
     <string name="gravity_center">center</string>
     <string name="gravity_right">right</string>
+    <string name="list_activity_title">rtsp监控</string>
+    <string name="add_camera_title">添加监控</string>
 
 </resources>
