--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,15 @@
     <string name="add_name_label">名称:</string>
     <string name="add_IP_label">IP地址:</string>
     <string name="add_port_label">端口:</string>
+    <string name="add_username_label">用户名:</string>
+    <string name="add_pwd_label">密码:</string>
     <string name="add_backstring_label">后缀:\t</string>
     <string name="add_edit_name_hint">例:电梯右上角</string>
     <string name="add_edit_ip_hint">例：192.168.1.217</string>
     <string name="add_edit_port_hint">例:554</string>
     <string name="add_edit_backstring_hint">例:stream2</string>
+    <string name="add_edit_username_hint">例:张三</string>
+    <string name="add_edit_pwd_hint">例:xxx</string>
     <string name="add_edit_emptyinfo_error_hint">有信息未填</string>
     <string name="wrong_edit_info_error_hint">您填的IP地址不正确</string>
     <string name="dialog_title">提示</string>
@@ -31,5 +35,12 @@
     <string name="gravity_right">right</string>
     <string name="list_activity_title">rtsp监控</string>
     <string name="add_camera_title">添加监控</string>
+    <string name="empty_camera_hint">暂时还没有任何监控记录</string>
+    <string name="play_capture">截屏</string>
+    <string name="play_record">录像</string>
+    <string name="play_lock">解锁</string>
+    <string name="play_next">下一个</string>
+    <string name="play_start">播放</string>
+    <string name="play_stop">暂停</string>
 
 </resources>
